fix: Fixed workspace icons resizing on overflow, b=closes #10596, c=workspaces

--- a/src/zen/workspaces/zen-workspaces.css
+++ b/src/zen/workspaces/zen-workspaces.css
@@ -47,11 +47,7 @@
       line-height: 0;
 
       &:is(img) {
-        padding: 6px;
-
-        :root:not([zen-sidebar-expanded='true']) & {
-          padding: 10px;
-        }
+        width: 14px;
       }
    
       &[no-icon='true'] {
